# omni-wells

./: .gitignore  Dockerfile  Makefile  README.md  README_pypi.md  pyproject.toml
.github/workflows/: ci.yaml
hi_lo_wells/: app.py  core.py  qt_app.py
hi_lo_wells/static/: sample_input.csv  script.js  style.css
hi_lo_wells/templates/: index.html
hi_lo_wells/templates/partials/: result.html
open_wells/: app.py
open_wells/static/: script.js
open_wells/templates/: index.html
tests/: conftest.py
tests/fixtures/: test_input.csv  test_output.csv
tests/integration/: test_routes.py
tests/unit/: test_app.py  test_core.py  test_prefs.py
